--- a/Notebooks/1_data_extraction.Rmd
+++ b/Notebooks/1_data_extraction.Rmd
@@ -107,14 +107,14 @@ full_cols <- c(
 
 ## Data Importing
 
-#### VA Long Beach
+### VA Long Beach
 
 ```{r VA_lb_importing}
 # using readLines, to read in each line of the long-beach-va.data file
 # read_table, read_csv proved difficult to use to extract
 # outline is to use the occurrence of 'name' to distinguish unique observations
 # extract all the lines
-va_raw_lines <- readLines("../Data/Raw/long-beach-va.data")
+va_raw_lines <- readLines(here("Data/Raw", "long-beach-va.data"))
 # merge all lines into one string
 va_all_text <- paste(va_raw_lines, collapse = " ")
 # split each observation on name
@@ -137,10 +137,10 @@ va_df_raw$location <- "VA Long Beach"
 
 ```
 
-#### Hungary
+### Hungary
 
 ```{r Hungary_data_importing}
-lines <- readLines(here("Data", "Raw/hungarian.data"))
+lines <- readLines(here("Data/Raw", "hungarian.data"))
 
 # Step 2: Combine every 10 lines per patient
 patient_blocks <- split(lines, ceiling(seq_along(lines) / 10))
@@ -171,12 +171,12 @@ hu_df_raw <- hu_df_raw %>%
 #ead(hu_df_raw)
 ```
 
-#### Switzerland
+### Switzerland
 
 ```{r Switzerland_importing}
 # Generative AI used to write code to read in .data file
 # Step 1: Read the file
-lines <- readLines(here("Data", "Raw/switzerland.data"))
+lines <- readLines(here("Data/Raw", "switzerland.data"))
 
 # Step 2: Combine every 10 lines per patient
 patient_blocks <- split(lines, ceiling(seq_along(lines) / 10))
@@ -205,14 +205,14 @@ sw_df_raw <- sw_df_raw %>%
 #head(sw_df_raw)
 ```
 
-#### Cleveland
+### Cleveland
 
 ``` {r cleveland_importing}
 # using readLines, to read in each line of the cleveland.data file
 # read_table, read_csv proved difficult to use to extract
 # outline is to use the occurrence of 'name' to distinguish unique observations
 # extract all the lines
-clvd_raw_lines <- readLines("../Data/Raw/cleveland.data", 
+clvd_raw_lines <- readLines(here("Data/Raw", "cleveland.data"),
                             warn = FALSE)
 #clvd_raw_lines
 # merge all lines into one string
@@ -254,6 +254,6 @@ merged_df
 
 # write the merged raw file out to the raw data folder as 'merged_df_raw.csv'
 # export to file
-write.csv(merged_df, "../Data/Raw/merged_df_raw.csv", 
+write.csv(merged_df, here("Data/Raw", "merged_df_raw.csv"), 
           row.names = FALSE)
 ```
